...
    <string name="duration_error_msg">Max. limit is 180 days</string>
    <string name="quantity_prescribed">Quantity prescribed</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="match_found">%s matches found</string>

    <string name="postal_code">Postal Code</string>
    <string name="postal_code_mandatory">Postal Code *</string>
    <string name="postal_code_error_msg">Enter valid 6 digit postal code</string>
    <string name="state">State</string>
    <string name="state_mandatory">State *</string>
    <string name="state_error_msg">Please select a state.</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_1_mandatory">Address Line 1 *</string>
    <string name="address_line_1_error_msg">Please enter your address.</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="city_mandatory">City *</string>
    <string name="city_error_msg">Please enter your city.</string>
    <string name="district">District</string>
    <string name="district_error_msg">Please enter your district.</string>

    <string name="email">Email</string>

    <string name="add_household_member">Add a household member</string>
    <string name="create_new_patient">Create a new patient, and
include them in the household</string>
    <string name="add_a_patient">Add a patient</string>
    <string name="search_existing_patient">Search for an existing patient, and
...
    <string name="patient_name">Patient Name</string>
    <string name="patient_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_id_error_msg">Patient Id should be between 2 and 12.</string>
    <string name="select_age_range">Select age range</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="last_facility_visit">Last facility visit</string>

    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="passport_id_web_link">https://www.passportindia.gov.in/</string>
    <string name="voter_id_web_link">https://www.nvsp.in/</string>
    <string name="patient_id_web_link">https://www.apollohospitals.com/</string>

    <string name="basic_information">Basic Information</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="optional_identification">Optional: Identification</string>
    <string name="passport_id">Passport ID</string>
    <string name="voter_id">Voter ID</string>
    <string name="addresses">Addresses</string>
    <string name="home_address">Home Address</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="discard_dialog_description">Are you sure you want to discard this patient record?</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="email_error_msg">Enter valid email (eg., abc123@gmail.com)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="error_msg_1_to_31_days">Enter valid day between 1 and 31.</string>
    <string name="error_msg_1_to_29_days">Enter valid day between 1 and 29.</string>
    <string name="year_error_msg">Enter valid year between 1900 and %s</string>

    <string name="age_days">Days</string>
    <string name="age_months">Months</string>
    <string name="age_years">Years</string>
    <string name="age_years_error_msg">Enter valid input between 0 to 150.</string>
    <string name="age_months_error_msg">Enter valid input between 1 and 11.</string>
    <string name="age_days_error_msg">Enter valid input between 1 and 30.</string>

    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_error_msg">Enter Valid Input</string>
...
    <string name="saving">Saving…</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="delete_account_dialog_description">Are you sure you want to delete your account. Deleting your account will remove all of your information from our database.</string>
    <string name="cvd_risk_assessment">CVD risk assessment</string>
    <string name="predict">Predict</string>
    <string name="age">Age:</string>
    <string name="gender_colon">Gender:</string>
    <string name="diabetic_colon">Diabetic:</string>
    <string name="current_smoker">Current smoker:</string>
    <string name="blood_pressure_colon">Blood pressure:</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
...
    <string name="random">Random</string>
    <string name="fasting">Fasting</string>
    <string name="blood_glucose_unit">Blood glucose unit</string>
    <string name="height_unit">Height unit</string>
    <string name="add_vitals">Add vitals</string>
    <string name="add_vital_title_text">ADD_VITAL_TITLE_TEXT</string>
    <string name="back_icon">BACK_ICON</string>
    <string name="dropdown_icon">DropDown Icon</string>
    <string name="hear_rate_min">Hear rate / min.</string>
    <string name="respiratory_rate_min">Respiratory rate / min.</string>
    <string name="eye_test_result_left">Eye test result (left)</string>
    <string name="eye_test_result_right">Eye test result (right)</string>
    <string name="spo2_title">SpO2 (%)</string>
...
