...
        modifier = Modifier.fillMaxSize(),
        snackbarHost = { SnackbarHost(hostState = snackBarHostState) },
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Basic information",
                        style = MaterialTheme.typography.titleLarge
                    )
                },
                navigationIcon = {
                    IconButton(onClick = {
                        navController.previousBackStackEntry?.savedStateHandle?.set(
...
                        )
                        navController.popBackStack()

                    }) {
                        Icon(
                            Icons.Default.Clear,
                            contentDescription = "clear icon"
                        )
                    }

                },
                colors = topAppBarColors(
                    containerColor = MaterialTheme.colorScheme.surfaceColorAtElevation(8.dp)
                ),
                actions = {
                    Text(
                        text = "Undo all",
                        fontSize = 14.sp,
                        fontWeight = FontWeight.Bold,
                        color = if (viewModel.isEditing) MaterialTheme.colorScheme.primary else Color.Gray,
                        modifier = Modifier
                            .padding(end = 12.dp)
                            .clickable(viewModel.isEditing, onClick = {
...
                        KeyboardCapitalization.Words
                    ) {
                        checkLastName(viewModel, it)
                    }
                    ValueLength(viewModel.lastName)
                    Row(modifier = Modifier.fillMaxWidth()) {
                        CustomFilterChip(viewModel.dobAgeSelector, "dob", "Date of Birth") {
                            viewModel.dobAgeSelector = it
                            viewModel.days = ""
                            viewModel.months = ""
                            viewModel.years = ""
                            viewModel.isAgeDaysValid = false
                            viewModel.isAgeMonthsValid = false
...
                if (it.length <= 10 && (it.matches(viewModel.onlyNumbers) || it.isEmpty()))
                    viewModel.phoneNumber = it
                viewModel.isPhoneValid = !viewModel.phoneNumber.matches(phoneNumberRegex)
            },
            modifier = Modifier
                .fillMaxWidth(1f)
                .testTag("Phone Number"),
            placeholder = {
                Text(text = "Enter Phone Number")
            },
            singleLine = true,
            keyboardOptions = KeyboardOptions(
                imeAction = ImeAction.Next,
...
