...
                                }
                            }
                        },
                        enabled = viewModel.isEnabled(),
                        modifier = Modifier
                            .fillMaxWidth()
                            .testTag("BUTTON")
                    ) {
                        if (!viewModel.isAuthenticating) Text(text = stringResource(id = R.string.submit))
                        else ButtonLoader()
                    }
                }
            }
...
                viewModel.inputValue = it.trim()
                viewModel.updateError()
            }
        },
        modifier = Modifier
            .fillMaxWidth()
            .testTag("INPUT_FIELD"),
        supportingText = if (viewModel.isError) {
            {
                Text(text = viewModel.errorMsg)
            }
        } else null,
        isError = viewModel.isError,
...
